@@ -5,6 +5,9 @@
 
 * release 1.10 updated until here **********************************************
 
+2017-03-31 mmichaud <m.michael.michaud@orange.fr>
+  * Fix a regression in RasterImageLayerPropertiesPlugIn
+
 2017-03-26 Giuseppe Aruta 
   * Updated CadTools extension to ver. 0.2
 
